--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,20 @@ crate-type = ["cdylib"]
 
 [dependencies]
 console_error_panic_hook = { version = "0.1.1", optional = true }
+js-sys = "0.3.20"
 lazy_static = "1.0"
 rand = { version = "0.6", features = ["wasm-bindgen"] }
 wasm-bindgen = "0.2.42"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    "console",
+    "CanvasRenderingContext2d",
+    "Document",
+    "Element",
+    "EventTarget",
+    "HtmlCanvasElement",
+    "KeyboardEvent",
+    "Window",
+]
