--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 console_error_panic_hook = { version = "0.1.1", optional = true }
@@ -29,3 +29,6 @@ features = [
     "KeyboardEvent",
     "Window",
 ]
+
+[dev-dependencies]
+wasm-bindgen-test = "0.2.43"
