--- a/www/package.json
+++ b/www/package.json
@@ -17,5 +17,8 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "@victorlee/bomberman-wasm": "^0.2.0"
   }
 }
