--- a/www/package.json
+++ b/www/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^0.2.7",
     "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
