--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.1",
     "url-loader": "^1.1.2",
