--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server",
+    "serve": "webpack-dev-server --env=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Lee",
